--- a/src/index.html
+++ b/src/index.html
@@ -119,33 +119,33 @@
         </div>
         <search1></search1>
         <div class="O_test-card">
-          <a href="">
+          <a href="./tests/unusual-horse.html">
             <div class="O_card-text-content">
-              <h4 class="A_card-title White">Часть обыденного</h4>
+              <h4 class="A_card-title White">Необычная лошадь</h4>
               <div class="C_tags White">
+                <p class="A_tag">смешное</p>
+                <p class="A_tag">бытовое</p>
                 <p class="A_tag">промышленность</p>
-                <p class="A_tag">старинное</p>
-                <p class="A_tag">постиндустриальное</p>
               </div>
               <p class="A_card-text Test-Article">
-                Множество изобретений так и не прижились, хотя на бумаге были
-                очень полезны
+                Тест по&nbsp;статье &laquo;вот это киберпанк&raquo; . смело
+                проверяйте свои знания
               </p>
             </div>
           </a>
         </div>
         <div class="O_test-card">
-          <a href="">
+          <a href="./tests/not-the-least-bit-weird.html">
             <div class="O_card-text-content">
-              <h4 class="A_card-title White">Клетка для детки</h4>
+              <h4 class="A_card-title White">Ни капельки ни странно</h4>
               <div class="C_tags White">
                 <p class="A_tag">бытовое</p>
-                <p class="A_tag">старинное</p>
-                <p class="A_tag">просто треш</p>
+                <p class="A_tag">современное</p>
+                <p class="A_tag">интересное</p>
               </div>
               <p class="A_card-text Test-Article">
-                Прочитали нашу статью? Пройдите тест и проверьте усвоили ли вы
-                материал
+                Хорошо&nbsp;ли вы&nbsp;запомнили статью &laquo;Ни&nbsp;капельки
+                не&nbsp;странно&raquo;?
               </p>
             </div>
           </a>
@@ -163,32 +163,36 @@
         </div>
       </div>
       <div class="C_videos">
-        <div class="O_video-card Image-type">
-          <a href="">
+        <div class="O_video-card howto_video_cover">
+          <a href="./videos/how-to-come-up.html">
             <div class="O_card-text-content Video">
-              <h4 class="A_card-title White">От идеи до реализации</h4>
+              <h4 class="A_card-title White">Как это придумать</h4>
               <div class="C_tags White">
+                <p class="A_tag">смешное</p>
+                <p class="A_tag">старинное</p>
                 <p class="A_tag">бытовое</p>
-                <p class="A_tag">современное</p>
-                <p class="A_tag">интересное</p>
               </div>
               <p class="A_card-text Video">
-                Показываем создание странных изобретений от идеи до воплощения
+                Мы рассказываем о том, как изобретатели генерят идеи
               </p>
             </div>
           </a>
         </div>
-        <div class="O_video-card Image-type">
-          <a href="">
+        <search1></search1>
+        <div
+          class="O_video-card better_video_cover"
+          data-tags="смешное,старинное,просто треш"
+        >
+          <a href="videos/better-over-the-years.html">
             <div class="O_card-text-content Video">
-              <h4 class="A_card-title White">Очевидно и невероятно</h4>
+              <h4 class="A_card-title White">Лучше с годами</h4>
               <div class="C_tags White">
                 <p class="A_tag">смешное</p>
                 <p class="A_tag">старинное</p>
                 <p class="A_tag">просто треш</p>
               </div>
               <p class="A_card-text Video">
-                В этом выпуске мы расскажем о простых, но непростых открытиях
+                Изобретения, которые смогли воплотить в реальность спустя годы
               </p>
             </div>
           </a>
