--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,11 @@
     <header></header>
 
     <div id="cover">
+      <img
+        src="./images/main_page/mainCoverImg.jpg"
+        alt="фон"
+        id="mainCoverImg"
+      />
       <div class="O_invention pos-absolut popup">
         <div class="W_widget-header White">
           <h6 class="A_widget-title">изобретение 1</h6>
