--- a/src/videos/its-just-a-coincidence.html
+++ b/src/videos/its-just-a-coincidence.html
@@ -16,7 +16,7 @@
     </div>
     <div class="W_video">
       <div class="W_section-lead">
-        <h3 class="A_page-title">вот ведь случайность!</h3>
+        <h3 class="A_page-title">вот ведь блин!</h3>
         <div class="C_tags Orange">
           <button class="A_tag">бытовое</button>
 
