--- a/src/videos/better-over-the-years.html
+++ b/src/videos/better-over-the-years.html
@@ -26,9 +26,9 @@
       </div>
       <div class="M_section-lead Video">
         <video
-          src="../images/video/video-fish.mov"
+          src="../images/video/better_with_years.mp4"
           controls
-          class="A_videos-cover Image-type"
+          class="A_videos-cover"
         ></video>
         <p class="A_cover-lead">
           Обсуждаем изобретения, которые смогли воплотить в реальность только
