--- a/src/videos/its-just-a-coincidence.html
+++ b/src/videos/its-just-a-coincidence.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/svg" href="../images/icon.svg" />
 
-    <title>вот ведь случайность!</title>
+    <title>вот ведь блин!</title>
   </head>
 
   <body class="video">
@@ -27,7 +27,7 @@
       </div>
       <div class="M_section-lead Video">
         <video
-          src="../images/video/video-fish.mov"
+          src="../images/video/vot_ved.mp4"
           controls
           class="A_videos-cover Image-type"
         ></video>
