--- a/src/videos/weirder-and-earlier.html
+++ b/src/videos/weirder-and-earlier.html
@@ -28,7 +28,7 @@
       </div>
       <div class="M_section-lead Video">
         <video
-          src="../images/video/video-fish.mov"
+          src="../images/video/very_scary.mp4"
           controls
           class="A_videos-cover Image-type"
         ></video>
@@ -44,7 +44,7 @@
         <a href="weirder-and-earlier.html">
           <div class="O_video-card coincidance_video_cover">
             <div class="O_card-text-content Video">
-              <h4 class="A_card-title White">Страньше и страньше</h4>
+              <h4 class="A_card-title White">Страньше и сраньше</h4>
               <div class="C_tags White">
                 <p class="A_tag">современное</p>
                 <p class="A_tag">смешное</p>
