--- a/src/videos/new-oddities.html
+++ b/src/videos/new-oddities.html
@@ -44,7 +44,7 @@
         <a href="weirder-and-earlier.html">
           <div class="O_video-card coincidance_video_cover">
             <div class="O_card-text-content Video">
-              <h4 class="A_card-title White">Страньше и страньше</h4>
+              <h4 class="A_card-title White">Страньше и сраньше</h4>
               <div class="C_tags White">
                 <p class="A_tag">современное</p>
                 <p class="A_tag">смешное</p>
